app/assets/stylesheets/pages/_new_flow.scss
.form-input {
  margin: 40px !important;
}

.element {
  justify-content: center;
  label {
    margin-right: 20px;
  }
}

.new-flow {
  text-align: center;
}

#flow-form-btn {
  padding: 15px 30px;
  background-color: #EE8572;
  border-radius: 4px;
  border: none;
  color: white;
}

